--- a/src/index.html
+++ b/src/index.html
@@ -476,6 +476,7 @@
             spaceBetween: 100,
           },
           992: {
+            slidesPerView: 3,
             spaceBetween: 100,
           },
         },
