--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -52,19 +52,33 @@
           суббота, воскресенье: выходные дни
         </p>
         <p class="green">Время местное!</p>
-        <p class="copyright">Copyright - Егоза, 2022</p>
+        <p class="copyright">Copyright - Егоза, 2023</p>
       </div>
       <div class="footer__middle">
         <div class="footer__grid">
           <div class="footer__item item item--mobile">
             <p class="item__text">Горячая линия</p>
             <a class="item__tel" href="tel:88002222081">8 800 22 22 081</a>
-            <button type="button" class="item__btn">Заказать звонок</button>
+            <button
+              type="button"
+              class="item__btn"
+              data-bs-toggle="modal"
+              data-bs-target="#contactModal"
+            >
+              Заказать звонок
+            </button>
           </div>
           <div class="footer__item item item--mobile">
             <p class="item__text">Мобильный телефон</p>
             <a class="item__tel" href="tel:+79226356813">+7 922 635 68 13</a>
-            <button type="button" class="item__btn">Задать вопрос</button>
+            <button
+              type="button"
+              class="item__btn"
+              data-bs-toggle="modal"
+              data-bs-target="#questionModal"
+            >
+              Задать вопрос
+            </button>
           </div>
           <div class="footer__item item">
             <p class="item__address">Офис в Москве</p>
