--- a/src/html/main-banner.html
+++ b/src/html/main-banner.html
@@ -2,18 +2,24 @@
   <div class="section__grid">
     <div class="section__item">
       <img src="img/main-banner/1.png" alt="" class="section__image" />
-      <h3 class="section__title">Завод винтовых свай «егоза»</h3>
+      <h1 class="section__title">Завод винтовых свай «егоза»</h1>
       <div class="section__content">
         <p class="section__text">
           Винтовые сваи для индустриальных и промышленных объектов
           <span>гарантия завода удобная оплата доставка по РФ и СНГ</span>
         </p>
-        <button class="section__btn">Рассчитать проект</button>
+        <button
+          class="section__btn"
+          data-bs-toggle="modal"
+          data-bs-target="#calculateModal"
+        >
+          Рассчитать проект
+        </button>
       </div>
     </div>
-    <div class="section__item">
+    <div class="section__item section__item--animate">
       <img src="img/main-banner/2.png" alt="" class="section__image" />
-      <h3 class="section__title">Стандартные сваи</h3>
+      <h2 class="section__title">Стандартные сваи</h2>
       <div class="section__content">
         <p class="section__text">
           от 57 мм до 426 мм одновитковые, многовитковые, бурозабивные, сваи для
@@ -22,9 +28,9 @@
         <a href="#" class="section__link">Подробнее</a>
       </div>
     </div>
-    <div class="section__item">
+    <div class="section__item section__item--animate">
       <img src="img/main-banner/3.png" alt="" class="section__image" />
-      <h3 class="section__title">Сваи для лэп</h3>
+      <h2 class="section__title">Сваи для лэп</h2>
       <div class="section__content">
         <p class="section__text">
           Свайно-винтовой фундамент имеет высокие прочностные показатели и
@@ -34,9 +40,9 @@
         <a href="#" class="section__link">Подробнее</a>
       </div>
     </div>
-    <div class="section__item">
+    <div class="section__item section__item--animate">
       <img src="img/main-banner/4.png" alt="" class="section__image" />
-      <h3 class="section__title">Свайный ростверк</h3>
+      <h2 class="section__title">Свайный ростверк</h2>
       <div class="section__content">
         <p class="section__text">
           Свайно-ростверковый фундамент – это комбинация из винтовых свай и
