--- a/src/html/header.html
+++ b/src/html/header.html
@@ -90,5 +90,75 @@
 
 <div class="header-headings">
   <div class="header-headings__backdrop"></div>
-  <div class="header-headings__menu"></div>
+  <div class="header-headings__menu">
+    <form action="" class="position-relative p-3">
+      <input type="text" class="form-control" placeholder="Поиск по" />
+    </form>
+    <ul class="menu__list">
+      <li class="menu__item"><a href="">Каталог продукции</a></li>
+      <li class="menu__item menu__item_parent item-parent_js">
+        <a href="">Наши проекты</a>
+        <ul class="menu__submenu menu">
+          <li class="menu__item"><a href="#">второй уровень</a></li>
+          <li class="menu__item menu__item_parent item-parent_js">
+            <a href="#">второй уровень</a>
+            <ul class="menu__submenu menu">
+              <li class="menu__item"><a href="#">третий уровень</a></li>
+              <li class="menu__item">
+                <a href="#">третий уровень</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item"><a href="">Доставка и оплата</a></li>
+      <li class="menu__item"><a href="">Гарантия</a></li>
+      <li class="menu__item"><a href="">Партнёрам</a></li>
+      <li class="menu__item"><a href="">О компании</a></li>
+      <li class="menu__item"><a href="">Отзывы</a></li>
+      <li class="menu__item"><a href="">Контакты</a></li>
+    </ul>
+    <button
+      class="btn dropdown-toggle mt-4"
+      data-bs-toggle="dropdown"
+      aria-expanded="false"
+    >
+      <div class="header__sity"><img src="img/geo.png" alt="" /> Москва</div>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-dark">
+      <li><a class="dropdown-item" href="#">Миасса</a></li>
+      <li><a class="dropdown-item" href="#">Санкт-Петербург</a></li>
+      <li><a class="dropdown-item" href="#">Челябинск</a></li>
+      <li><a class="dropdown-item" href="#">Екатеринбург</a></li>
+      <li><a class="dropdown-item" href="#">Уфа</a></li>
+      <li><a class="dropdown-item" href="#">Тюмень</a></li>
+      <li><a class="dropdown-item" href="#">Хабаровск</a></li>
+      <li><a class="dropdown-item" href="#">Астана</a></li>
+      <li><a class="dropdown-item" href="#">Алматы</a></li>
+    </ul>
+    <div class="mt-4 p-3">
+      <div class="header__contact header__phone">
+        <a href="tel:88002222081">8 800 222 20 81</a>
+      </div>
+      <div class="header__contact header__email mt-2">
+        <a href="mailto:info@uralzvs.ru">info@uralzvs.ru</a>
+      </div>
+      <button
+        type="button"
+        class="header__btn mt-2"
+        data-bs-toggle="modal"
+        data-bs-target="#questionModal"
+      >
+        Задать вопрос
+      </button>
+      <button
+        type="button"
+        class="header__btn mt-2"
+        data-bs-toggle="modal"
+        data-bs-target="#contactModal"
+      >
+        Заказать звонок
+      </button>
+    </div>
+  </div>
 </div>
