--- a/src/index.html
+++ b/src/index.html
@@ -304,14 +304,17 @@
         </div>
       </section>
 
-      <!-- <section class="section section--about">
+      <section class="section section--about">
         <div class="container">
-          <h2 class="section__title">
+          <h2 class="section__title wow animate__fadeIn" data-wow-duration="1s">
             Южно-уральский Завод винтовых свай Егоза — это:
           </h2>
-          <div class="section__content">
-            <img src="img/about/background.png" alt="" />
-            <p class="section__text section__text--1">
+          <div
+            class="section__content wow animate__fadeIn"
+            data-wow-duration="1s"
+          >
+            <img src="img/about/background2.png" alt="" />
+            <!-- <p class="section__text section__text--1">
               собственное производство и собственный автопарк
             </p>
             <p class="section__text section__text--2">
@@ -328,13 +331,13 @@
             </p>
             <p class="section__text section__text--3">
               проверенные поставщики и качественные материалы
-            </p>
+            </p> -->
           </div>
           <div class="section__footer">
             <a href="">Подробнее о компании</a>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="section section--partners">
         <div class="container">
@@ -861,6 +864,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/scripts.js"></script>
 
     <!-- Initialize Wow animate -->
