--- a/src/html/header.html
+++ b/src/html/header.html
@@ -55,7 +55,7 @@
 <nav class="nav">
   <div class="container">
     <ul class="nav__list">
-      <li class="nav__item"><a href="">Каталог продукции</a></li>
+      <li class="nav__item"><a href="/catalog">Каталог продукции</a></li>
       <li class="nav__item">
         <a href="">Наши проекты</a>
         <ul class="nav__list--2">
@@ -95,7 +95,7 @@
       <input type="text" class="form-control" placeholder="Поиск по" />
     </form>
     <ul class="menu__list">
-      <li class="menu__item"><a href="">Каталог продукции</a></li>
+      <li class="menu__item"><a href="/catalog">Каталог продукции</a></li>
       <li class="menu__item menu__item_parent item-parent_js">
         <a href="">Наши проекты</a>
         <ul class="menu__submenu menu">
