--- a/src/catalog.html
+++ b/src/catalog.html
@@ -431,6 +431,132 @@
                   60 мм
                 </button>
               </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="73-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#73-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="73-tab-pane"
+                  aria-selected="true"
+                >
+                  73 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="76-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#76-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="76-tab-pane"
+                  aria-selected="true"
+                >
+                  76 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="89-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#89-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="89-tab-pane"
+                  aria-selected="true"
+                >
+                  89 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="108-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#108-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="108-tab-pane"
+                  aria-selected="true"
+                >
+                  108 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="133-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#133-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="133-tab-pane"
+                  aria-selected="true"
+                >
+                  133 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="159-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#159-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="159-tab-pane"
+                  aria-selected="true"
+                >
+                  60 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="219-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#219-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="219-tab-pane"
+                  aria-selected="true"
+                >
+                  219 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="325-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#325-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="325-tab-pane"
+                  aria-selected="true"
+                >
+                  325 мм
+                </button>
+              </li>
+              <li role="presentation">
+                <button
+                  class="btn tab__link"
+                  id="426-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#426-tab-pane"
+                  type="button"
+                  role="tab"
+                  aria-controls="426-tab-pane"
+                  aria-selected="true"
+                >
+                  426 мм
+                </button>
+              </li>
             </ul>
             <div class="tab-content" id="myTabContent">
               <div
@@ -447,6 +573,87 @@
                 id="60-tab-pane"
                 role="tabpanel"
                 aria-labelledby="60-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="76-tab-pane"
+                role="tabpanel"
+                aria-labelledby="76-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="73-tab-pane"
+                role="tabpanel"
+                aria-labelledby="73-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="89-tab-pane"
+                role="tabpanel"
+                aria-labelledby="89-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="108-tab-pane"
+                role="tabpanel"
+                aria-labelledby="108-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="133-tab-pane"
+                role="tabpanel"
+                aria-labelledby="133-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="159-tab-pane"
+                role="tabpanel"
+                aria-labelledby="159-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="219-tab-pane"
+                role="tabpanel"
+                aria-labelledby="219-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="325-tab-pane"
+                role="tabpanel"
+                aria-labelledby="325-tab"
+                tabindex="0"
+              >
+                <img src="img/tables/1.png" alt="" />
+              </div>
+              <div
+                class="tab-pane fade"
+                id="426-tab-pane"
+                role="tabpanel"
+                aria-labelledby="426-tab"
                 tabindex="0"
               >
                 <img src="img/tables/1.png" alt="" />
@@ -487,31 +694,31 @@
 
             <div class="section__list">
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
             </div>
@@ -523,31 +730,31 @@
 
             <div class="section__list">
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
               <div class="section__item item">
-                <img src="img/product/Слой 5.png" alt="" class="item__image" />
+                <img src="img/product/1.png" alt="" class="item__image" />
                 <p class="item__text">для детских площадок</p>
               </div>
             </div>
