--- a/src/catalog.html
+++ b/src/catalog.html
@@ -37,7 +37,7 @@
             Винтовые сваи производства Завода винтовых свай Егоза
           </h2>
           <div class="section__grid">
-            <div class="section__item item">
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -53,8 +53,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -70,8 +70,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -87,8 +87,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -104,8 +104,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -121,8 +121,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -138,8 +138,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -155,8 +155,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -172,41 +172,7 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
-              <img
-                src="img/product/Многовитковые 4.png"
-                class="item__image"
-                alt=""
-              />
-              <div class="item__content">
-                <h6 class="item__title">Сваи шуруп</h6>
-                <p class="item__text">
-                  Винтовая свая «шуруп» имеет вид металлической трубы с
-                  конусообразным наконечником и монтажным отверстием сверху.
-                </p>
-                <p class="item__text">
-                  Литой наконечник оснащен узкой многовитковой лопастью.
-                </p>
-              </div>
-            </div>
-            <div class="section__item item">
-              <img
-                src="img/product/Многовитковые 4.png"
-                class="item__image"
-                alt=""
-              />
-              <div class="item__content">
-                <h6 class="item__title">Сваи шуруп</h6>
-                <p class="item__text">
-                  Винтовая свая «шуруп» имеет вид металлической трубы с
-                  конусообразным наконечником и монтажным отверстием сверху.
-                </p>
-                <p class="item__text">
-                  Литой наконечник оснащен узкой многовитковой лопастью.
-                </p>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </section>
@@ -221,7 +187,7 @@
             Свайно-винтовой фундамент
           </h2>
           <div class="section__grid">
-            <div class="section__item item">
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -237,8 +203,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -254,8 +220,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -271,8 +237,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -288,8 +254,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -305,8 +271,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -322,8 +288,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -339,8 +305,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -356,41 +322,7 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
-              <img
-                src="img/product/Многовитковые 4.png"
-                class="item__image"
-                alt=""
-              />
-              <div class="item__content">
-                <h6 class="item__title">Сваи шуруп</h6>
-                <p class="item__text">
-                  Винтовая свая «шуруп» имеет вид металлической трубы с
-                  конусообразным наконечником и монтажным отверстием сверху.
-                </p>
-                <p class="item__text">
-                  Литой наконечник оснащен узкой многовитковой лопастью.
-                </p>
-              </div>
-            </div>
-            <div class="section__item item">
-              <img
-                src="img/product/Многовитковые 4.png"
-                class="item__image"
-                alt=""
-              />
-              <div class="item__content">
-                <h6 class="item__title">Сваи шуруп</h6>
-                <p class="item__text">
-                  Винтовая свая «шуруп» имеет вид металлической трубы с
-                  конусообразным наконечником и монтажным отверстием сверху.
-                </p>
-                <p class="item__text">
-                  Литой наконечник оснащен узкой многовитковой лопастью.
-                </p>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </section>
@@ -768,7 +700,7 @@
             Ограждающие конструкции производства Завода Егоза
           </h2>
           <div class="section__grid">
-            <div class="section__item item">
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -784,8 +716,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -801,8 +733,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -818,8 +750,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -835,8 +767,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -852,8 +784,8 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
-            <div class="section__item item">
+            </a>
+            <a href="#" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -869,7 +801,41 @@
                   Литой наконечник оснащен узкой многовитковой лопастью.
                 </p>
               </div>
-            </div>
+            </a>
+            <a href="#" class="section__item item">
+              <img
+                src="img/product/Многовитковые 4.png"
+                class="item__image"
+                alt=""
+              />
+              <div class="item__content">
+                <h6 class="item__title">Сваи шуруп</h6>
+                <p class="item__text">
+                  Винтовая свая «шуруп» имеет вид металлической трубы с
+                  конусообразным наконечником и монтажным отверстием сверху.
+                </p>
+                <p class="item__text">
+                  Литой наконечник оснащен узкой многовитковой лопастью.
+                </p>
+              </div>
+            </a>
+            <a href="#" class="section__item item">
+              <img
+                src="img/product/Многовитковые 4.png"
+                class="item__image"
+                alt=""
+              />
+              <div class="item__content">
+                <h6 class="item__title">Сваи шуруп</h6>
+                <p class="item__text">
+                  Винтовая свая «шуруп» имеет вид металлической трубы с
+                  конусообразным наконечником и монтажным отверстием сверху.
+                </p>
+                <p class="item__text">
+                  Литой наконечник оснащен узкой многовитковой лопастью.
+                </p>
+              </div>
+            </a>
           </div>
         </div>
       </section>
