add catalog-2 page + bugfix

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -603,7 +603,7 @@
             Срок расчета проекта 2 рабочих дня.
           </p>
 
-          <button type="button" class="section__btn">
+          <button type="button" class="btn--orange section__btn">
             Оставить заявку на проект
           </button>
 
