add news page and catalog-3

--- a/src/catalog-2.html
+++ b/src/catalog-2.html
@@ -25,12 +25,12 @@
   <body>
     @@include('html/header.html')
     <main>
-      <section class="section section--pagination">
+      <section class="section section--breadcrumb">
         <div class="container">
-          <ul class="pagination">
-            <li class="pagination__item">Главная</li>
-            <li class="pagination__item">Каталог продукции</li>
-            <li class="pagination__item">Винтовые сваи шуруп</li>
+          <ul class="breadcrumb">
+            <li class="breadcrumb__item">Главная</li>
+            <li class="breadcrumb__item">Каталог продукции</li>
+            <li class="breadcrumb__item">Винтовые сваи шуруп</li>
           </ul>
         </div>
       </section>
