--- a/src/contacts.html
+++ b/src/contacts.html
@@ -28,11 +28,11 @@
   <body>
     @@include('html/header.html')
     <main>
-      <section class="section section--pagination">
+      <section class="section section--breadcrumb">
         <div class="container">
-          <ul class="pagination">
-            <li class="pagination__item">Главная</li>
-            <li class="pagination__item">Контакты</li>
+          <ul class="breadcrumb">
+            <li class="breadcrumb__item">Главная</li>
+            <li class="breadcrumb__item">Контакты</li>
           </ul>
         </div>
       </section>
