add catalog3 page

--- a/src/catalog-3.html
+++ b/src/catalog-3.html
@@ -390,6 +390,82 @@
         </div>
       </section>
 
+      <section class="section section--catalog-description">
+        <div class="container">
+          <div class="section__content">
+            <img
+              src="img/product/Кривые1.png"
+              alt=""
+              class="section__image section__image--left"
+            />
+            <p>
+              Винтовая свая «шуруп» имеет вид металлической трубы с
+              конусообразным наконечником и монтажным отверстием сверху. Литой
+              наконечник оснащен узкой многовитковой лопастью.
+            </p>
+
+            <p>
+              Внешне сваи с литым многовитковым наконечником напоминают
+              «саморез», со схожим принципом работы: наконечник разрезает и
+              уплотняет грунт, а лопасть благодаря своему маленькому диаметру
+              облегчает процесс завинчивания сваи.
+            </p>
+            <p>
+              Литой наконечник способствует более точному и быстрому монтажу
+              винтовых свай в сложных и мерзлых грунтах.
+            </p>
+            <p>
+              Винтовая свая «шуруп» имеет вид металлической трубы с
+              конусообразным наконечником и монтажным отверстием сверху.
+            </p>
+            <p>
+              Винтовая свая «шуруп» имеет вид металлической трубы с
+              конусообразным наконечником и монтажным отверстием сверху. Литой
+              наконечник оснащен узкой многовитковой лопастью.
+            </p>
+          </div>
+          <div class="section__content mt-5">
+            <img
+              src="img/product/Кривые2.png"
+              alt=""
+              class="section__image section__image--right"
+            />
+            <h3 class="section__subtitle">
+              Приобретая продукцию Завода Егоза, вы получаете:
+            </h3>
+            <p>
+              <strong
+                >Разнообразие изготавливаемых свай со сварным
+                наконечником.</strong
+              >
+              Модельная линейка включает изделия 11 разных диаметров,
+              отличающихся по длине
+            </p>
+
+            <p>
+              <strong> Доступный уровень цен.</strong> Мы сами производим и сами
+              реализуем сваи на рынке, что гарантирует отсутствие торговых
+              наценок посредников
+            </p>
+            <p>
+              <strong>Быстрое изготовление любого объема продукции</strong> при
+              отсутствии достаточного запаса на складе
+            </p>
+            <p><strong>Гарантия на всю продукцию</strong> от XX лет.</p>
+            <p>
+              В качестве дополнительного аргумента в пользу сотрудничества с
+              нами выступает
+              <strong>возможность выбора удобной формы оплаты</strong> товара и
+              организация
+              <strong>доставки в любой регион России и стран СНГ.</strong>
+            </p>
+          </div>
+          <div class="section__footer">
+            <a href="#">Подробнее о компании</a>
+          </div>
+        </div>
+      </section>
+
       <section class="section section--feedback section--feedback-catalog-2">
         <div class="container">
           <h6 class="section__text">
@@ -483,10 +559,6 @@
             </div>
           </div>
         </div>
-      </section>
-
-      <section class="section section--catalog-description">
-        <div class="container"></div>
       </section>
 
       <section class="section section--feedback section--feedback-catalog-3">
